[package]
name = "rss-poller"
version = "1.0.0"
authors = ["alexey <alexey.yakubov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "*"
reqwest = "*"
select = "*"
rss = { version = "*", features = ["from_url"] }
serde = "*"
serde_json = "*"
toml = "*"
md5 = "*"
hex = "*"
chrono = "*"
ndarray = "*"